app/assets/sass/dri/dri.scss
/* ... */
.dri_institutes_show_more {
  margin: 0;
  padding: 0;
  a {
    margin: 0;
    padding: 0px;
    color: #2F2F2F;
    font-weight: bold;
  }
}

.dri_collection_institutes_item img {
  margin: 10px;
  padding: 10px;
}

/*-------------- General Buttons --------------*/
.dri_grey_button {
  color: #FFF;
  border: none;
  background-color: #B3B3B3;
  margin: 20px 0 20px 0;
  -moz-border-radius: 2px;
  border-radius: 2px;
  float: left;
  text-align: center;
  a {
    padding: 4px 0 0 0;
    color: #FFF;
    width: 230px;
    height: 22px;
    display: block;
  }
  a:hover {
    background-color: #999999;
  }
}

/*-------------- Footer navigation --------------*/
.dri_main_footer_navigation {
  margin: 100px 0 70px 0;
  padding: 0px;
  border-top: 1px solid #D9DADB;
  height: 40px;
  ul {
    margin: 0px;
    padding: 0px;
  }
  li {
    float: left;
    margin: 10px 0 10px 0;
    padding: 0 20px 0 20px;
    font-size: 100%;
    font-weight: normal;
    list-style: none;
    text-decoration: none;
    border-right: 1px solid #D9DADB;
    a {
      list-style: none;
      text-decoration: none;
      color: #808082;
      margin: 0;
      padding: 0;
      display: block;
    }
    a:hover {
      text-decoration: underline;
    }
  }
  li.selected {
    text-decoration: underline;
  }
  li.no_border_right {
    border-right: none;
  }
}

.dri_funder_institutes {
  padding-top: 20px;
}

.dri_footer_address {
  margin: 10px 0 10px 0;
  color: $dri_greytext;
  a {
    color: $dri_greytext;
    text-decoration: underline;
  }
}

.dri_main_footer {
  .dri_footer_address {
    float: right;
    text-align: right;
    padding-right: 5px;
  }
}

/*-------------- Standard CSS --------------*/
// Hide, clear etc.

.dri_clearfix {
  @include zen-clear;
}

.dri_invisible {
  visibility: hidden;
}

.dri_uppercase {
  text-transform: uppercase;
}

.dri_capitalize {
  text-transform: capitalize;
}

.dri_no_display {
  display: none;
}

.dri_float_right {
  float: right;
}

.dri_float_left {
  float: left;
}

.dri_bold_text {
  font-weight: bold;
}

.dri_noborder {
  border: inherit;
}

/* static blocks */

.dri_about_box {
  margin: 0;
  height: 230px;
  border: 1px solid #D9DADB;
  -moz-border-radius: 2px;
  border-radius: 2px;
  color: #808082;
}

.dri_ingest_form_container {
  padding-top:20px;
  .dri_ingest_form {
    .dri_xml_upload {
      //float:right;
    }
    .dri_file_upload {
      //float: right;
      display: inline-block;
      position:relative;
      margin-top: 10px;
      margin-bottom: 10px;
      width:480px;
      .dri_cover_image_img {
        width:228px;
        height:128px;
        overflow:hidden;
        float:right;
        margin-right: 10px;
        h2 {
          position:absolute;
          top: 20%;
          right: 25px;
        }
        img {
          opacity: .7;
        }
      }

      a{
        padding:10px;
              height: 128px;
      width: 228px;
      vertical-align: center;
        input {
          position:absolute;
          z-index:2;
          top:0;
          left:0;
          height:100%;
          filter: alpha(opacity=0);
          -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
          opacity:0;
          background-color:transparent;
          color:transparent;
        }
      }
      .dri_cover_image_file {
        clear:left;
      }
    }
    fieldset {
      margin-top: 5px;
      
      label {
        display: block;
        clear:both;
        font-size: 1.2em;

      }
      .dri_form_multiline_block {
        textarea {
          max-width: 509px;
          clear:both;
          padding-left: 5px;
          margin-bottom: 5px;
          border-radius: 0px;
          font-size: 1.1em;
          border: 1px solid $dri_lightgrey;
        }
      }
      input {
        clear:both;
        padding-left: 5px;
        margin-bottom: 5px;
        border-radius: 0px;
        min-height: 2em;
        font-size: 1.1em;
      }
      select {
        //width: 10%;
        border-radius: -1px;
        height: 2em;
        font-size: 1.1em;
        -webkit-border-radius: none;
        -moz-border-radius: 0px;
        vertical-align: top;
        padding-bottom: 12px;

      }
      .span6 {
        max-width: 55%;
      }
    }
  }
}

